class04/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express   
  template:
    metadata:
      labels:
        app: express
    spec: 
      containers:
      - name: express-container
        image: cohort_2_express:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources: 
          limits:
            cpu: "500m"
            memory: "128Mi"
          requests:
            cpu: "250m"
            memory: "64Mi"
